--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog_backend",
+  "name": "demo_backend",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -8,9 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "ant-design-vue": "^3.2.10",
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
+    "less": "^4.1.3",
     "vue": "^3.2.25",
-    "vue-router": "^4.1.1"
+    "vue-router": "^4.1.1",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
