--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.10",
+    "chart.js": "^3.8.0",
     "crypto-js": "^4.1.1",
     "less": "^4.1.3",
     "vue": "^3.2.25",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^4.1.1",
     "vue3-cookies": "^1.0.6"
   },
