--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.0.3",
     "@vitejs/plugin-vue": "^2.3.3",
-    "typescript": "^4.5.4",
+    "typescript": "^4.7.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
   }
